--- a/www/index.html
+++ b/www/index.html
@@ -70,19 +70,19 @@
 				<div class="sixteen columns" >
 					<ul class="menu">
 						<li data-submenu="profile" class="multi-menu">
-							<a href="http://altrim-asani.com" class="active"><span class="bullet"></span><i class="icon-user"><span>My profile</span></i></a>
+							<a href="index.html" class="active"><span class="bullet"></span><i class="icon-user"><span>My profile</span></i></a>
 						</li>
 						<li data-submenu="services" class="multi-menu">
-							<a href="http://altrim-asani.com/services.html"><i class="icon-suitcase"><span>Services</span></i></a>
+							<a href="services.html"><i class="icon-suitcase"><span>Services</span></i></a>
 						</li>					
 						<li data-submenu="portfolio" class="multi-menu">
-							<a href="http://altrim-asani.com/portfolio.html"><i class="icon-picture"><span>Portfolio</span></i></a>
+							<a href="portfolio.html"><i class="icon-picture"><span>Portfolio</span></i></a>
 						</li>					
 						<li>
-							<a href="http://altrim-asani.com/resume.html"><i class="icon-list"><span>Resume</span></i></a>
+							<a href="resume.html"><i class="icon-list"><span>Resume</span></i></a>
 						</li>
 						<li>
-							<a href="http://altrim-asani.com/contact.html" class="last"><i class="icon-envelope"><span>Contact</span></i></a>
+							<a href="contact.html" class="last"><i class="icon-envelope"><span>Contact</span></i></a>
 						</li>						
 					</ul>			
 				</div>		
@@ -93,15 +93,15 @@
 	<nav id="submenu">
 		<div class="container">
 			<ul class="submenu" data-submenu="profile">
-				<li><a href="http://www.altrim-asani.com" class="active submenu-active"><i class="icon-user"><span>Profile Details</span></i></a></li>
+				<li><a href="index.html" class="active submenu-active"><i class="icon-user"><span>Profile Details</span></i></a></li>
 				<!--<li><a href=""><i class="icon-reorder"><span>My Blog</span></i></a></li>-->
 			</ul>
 			<ul class="submenu" data-submenu="services">
-				<li><a href="http://altrim-asani.com/services.html"><i class="icon-suitcase"><span>Services</span></i></a></li>
+				<li><a href="services.html"><i class="icon-suitcase"><span>Services</span></i></a></li>
 				<!--<li><a href=""><i class="icon-bar-chart"><span></span></i></a></li>-->
 			</ul>			
 			<ul class="submenu" data-submenu="portfolio">
-				<li><a href="http://altrim-asani.com/portfolio.html"><i class="icon-picture"><span>Portfolio</span></i></a></li>		
+				<li><a href="portfolio.html"><i class="icon-picture"><span>Portfolio</span></i></a></li>		
 			</ul>				
         </div>	
 	</nav>
