--- a/www/contact.html
+++ b/www/contact.html
@@ -133,7 +133,7 @@
 			<div class="eight columns">
 				<ul class="contact-details">
 					<li><i class="icon-comment"></i><span>altr1m.asan1@gmail.com</span></li>
-					<li><i class="icon-map-marker"></i><span>Macedonia</span></li>
+					<!--<li><i class="icon-map-marker"></i><span>Macedonia</span></li>-->
 					<!--<li><i class="icon-phone"></i><span></span></li>-->
 					<li><i class="icon-flag"></i><span>www.altrim-asani.com</span></li>				
 				</ul>
