--- a/www/resume.html
+++ b/www/resume.html
@@ -102,7 +102,7 @@
 			</ul>			
 			
 			<ul class="submenu" data-submenu="portfolio">
-				<li><a href="portfolio.html" class="active submenu-active"><i class="icon-picture"><span>Portfolio</span></i></a></li>			
+				<li><a href="portfolio.html" class="submenu-active"><i class="icon-picture"><span>Portfolio</span></i></a></li>			
 			</ul>			
 		</div>	
 	</nav>
@@ -323,6 +323,12 @@
                  <div class="four columns omega">
 					<div class="award-header last">
 						<h3>FileZilla</h3>
+					</div><span class="resume-bullet-bottom"></span>
+				</div>
+                
+                <div class="four columns omega">
+					<div class="award-header last">
+						<h3>PhoneGap</h3>
 					</div><span class="resume-bullet-bottom"></span>
 				</div>
                 
