--- a/www/services.html
+++ b/www/services.html
@@ -139,13 +139,13 @@
 					<p>In order to publish a website online, you need a Web host. The Web host stores all the pages of your website and makes them available to computers connected to the Internet. </p>
 				</div>
 			</div>
-			<!--<div class="four columns">
+			<div class="four columns">
 				<div class="process-part">
-					<div class="icon-box"><i class="icon-desktop"></i></div>
-					<h2></h2>
-					<p></p>
+					<div class="icon-box"><i class="fa fa-mobile"></i></div>
+					<h2>Mobile APP</h2>
+					<p>Mobile APP Development for Android and IOS.<br>Technologies used: IntelliJ IDEA and PhoneGap</p>
 				</div>
-			</div>	-->		
+			</div>		
 		</div>	
 	</section>
 
